--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@atomiclotus/random-name-generator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Generate random name(s) from colors, adjectives, and animals",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
   },
   "homepage": "https://github.com/iconifyit/random-name-generator#readme",
   "devDependencies": {
-    "jest": "^29.3.1"
+    "@babel/core": "^7.20.7",
+    "babel-loader": "^9.1.0",
+    "commander": "^9.4.1",
+    "jest": "^29.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
