--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@atomiclotus/random-name-generator",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Generate random name(s) from colors, adjectives, and animals",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production"
+  },
+  "bin": {
+    "random-name": "./dist/cli.js"
   },
   "repository": {
     "type": "git",
@@ -25,9 +28,11 @@
   },
   "homepage": "https://github.com/iconifyit/random-name-generator#readme",
   "devDependencies": {
+    "@atomiclotus/random-name-generator": "^1.0.6",
     "@babel/core": "^7.20.7",
     "babel-loader": "^9.1.0",
     "commander": "^9.4.1",
+    "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
